# imn

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
asset/config/: setting_default.json
asset/config/lang/: en.json  zh.json
asset/image/: a.raw
cmake/: common.cmake  config.cmake  install_python.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  app.cpp  app.hpp  backend.cpp  backend.hpp  backend_gl.hpp  cache.hpp  i18n.hpp  io.cpp  io.hpp  lambda.hpp  log.cpp  log.hpp  moon.cpp  moon.hpp  object.hpp  python.cpp  python.hpp  setting.cpp  setting.hpp  signal.hpp  thread_pool.hpp  user_history.cpp  user_history.hpp
src/ext/: CMakeLists.txt
src/ext/imgui_node_editor/: CMakeLists.txt
src/ext/imgui_notify/: IconsFontAwesome6.h  ImGuiNotify.hpp
src/ext/node_editor/: CMakeLists.txt  imnodes.cpp  imnodes.h
src/include/: def.hpp
src/python/nodes/: demo.py  imn.pyi
src/python/scripts/: inspect_util.py
src/ui/: CMakeLists.txt  base_window.hpp  image_viewer.cpp  image_viewer.hpp  imgui_helper.cpp  imgui_helper.hpp  imgui_vtk_demo.h  main_window.cpp  main_window.hpp  node.hpp  node_editor.hpp  node_window.cpp  node_window.hpp  style.cpp  style.hpp  volume_viewer.cpp  volume_viewer.hpp  vtk_viewer.cpp  vtk_viewer.hpp
src/ui/dialog/: CMakeLists.txt  ImGuiFileDialog.cpp  import_dialog.hpp  progress_dialog.cpp  progress_dialog.hpp
src/ui/imgui_node_editor/: imgui_node_editor.cpp  imgui_node_editor.h
src/ui/node_editor/: blueprints-example.cpp  node.cpp  node.hpp
src/ui/node_editor/imgui_node_editor/: CMakeLists.txt
src/ui/node_editor/imgui_node_editor/utilities/: builders.cpp  imgui_stack.cpp  imgui_stack.h
src/ui/nodes/: CMakeLists.txt  demo.cpp  demo.hpp  factory.cpp  factory.hpp  nodes.cpp  nodes.hpp  pins.cpp  pins.hpp  python_nodes.cpp  python_nodes.hpp  struct.cpp  struct.hpp
src/ui/widget/: CMakeLists.txt  common_widgets.cpp  common_widgets.hpp  imgui_notify.h
src/ui/widgets/: CMakeLists.txt  image_widget.cpp  image_widget.hpp  node_widget.cpp  node_widget.hpp  volume_widget.cpp  volume_widget.hpp
src/util/: CMakeLists.txt  common.cpp  common.hpp  fs.cpp  fs.hpp  imgui_util.cpp  imgui_util.hpp
